Log module path info in verbose log